# XMD

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  config.toml.example  main.py  pyproject.toml  requirements.txt
docs/: README_zh-tw.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/static/css/: input.css
frontend/static/ts/: api.ts  app.ts
frontend/static/ts/views/: download.ts  overview.ts
frontend/templates/: index.html
src/: __init__.py  abc.py  config.py  queues.py  sqlite.py  utils.py
src/components/discord/: bot.py  main.py
src/components/fastapi/: api.py  app.py  main.py
src/components/twitter/: main.py  noti_get.py  utils.py
src/services/discord/: bot.py
src/services/discord/cmds/: channel.py  command.py
src/services/discord/core/: translator.py  utils.py
src/services/discord/core/locales/: en-US.json  zh-CN.json  zh-TW.json  參考.md
src/services/fastapi/: __init__.py  api.py  app.py  type.py  utils.py
src/services/twitter/: __init__.py  main.py  noti_get.py  utils.py
test/: media_url_test.py
